@@ -1,6 +1,11 @@
-Sun Apr 24 14:11:49 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
+Sun Apr 24 21:11:49 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed undefining to actually work.
+
+	* The top distribution now takes precedence on defined
+	  distdefs over inherited distributions, and can override
+	  defined and undefined distdefs (previously it could only
+	  undefine defined but not define specificly undefined :)).
 
 Sat Apr 23 12:49:09 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
